# ELM-tool

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  check_test_data.py  elm-tool.py  pyproject.toml  pytest.ini  requirements.txt  test_api.py  todos  version_manager.py
.augment/: gsd-file-manifest.json
.augment/agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-doc-classifier.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.augment/hooks/: gsd-check-update-worker.js  gsd-check-update.js  gsd-context-monitor.js  gsd-read-injection-scanner.js  gsd-statusline.js
.claude/: settings.local.json
.github/workflows/: publish.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  (+3 more)
database_setup/: DATABASE_SETUP_README.md  DockerManager.py  TestDatabaseConfigs.py  database_setup.py  requirements.txt
elm/: __init__.py  __main__.py  api.py  elm.py  models.py
elm-tool/: elmtool.py
tests/: README.md  __init__.py  conftest.py  test_copy.py  test_data_utils.py  test_databases.py  test_docker.py  test_elm_tool_entry.py  test_encryption.py  test_environment.py  test_environment_commands.py  test_generate.py  test_history.py  test_history_cli.py  test_history_gui.py  test_mask.py  test_mask_algorithms.py  test_mask_commands.py  test_models.py  test_prepare_and_check_databases.py  test_venv.py  tst_variables.py
(+200 files in other folders)
