[project]
name = "elm"
version = "0.0.1"
description = "Extract, Load and Mask Tool for Database Operations"
authors = [{name = "Ömer Faruk Kırlı", email = "omerfarukkirli@gmail.com"}]
dependencies = [
    "click>=8.0.0",
    "cryptography>=3.4.7",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    "platformdirs>=3.0.0",
    "configparser>=5.0.0",
    "pyyaml>=6.0",
]

# Optional database-specific dependencies
[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.1"]
oracle = ["cx_oracle>=8.3.0"]
mysql = ["pymysql>=1.0.2"]
mssql = ["pyodbc>=4.0.34"]
all-db = ["psycopg2-binary>=2.9.1", "cx_oracle>=8.3.0", "pymysql>=1.0.2", "pyodbc>=4.0.34"]

[project.scripts]
elm = "elm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
